<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/login2Nav">

    <fragment
        android:id="@+id/login2Nav"
        android:name="com.example.android.shoe_store.screens.login.LoginFragment"
        android:label="@string/login_btn_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_nav_to_welcome"
            app:destination="@id/welcomeFragmentNav"
            app:popUpTo="@id/login2Nav"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragmentNav"
        android:name="com.example.android.shoe_store.screens.welcome.WelcomeFragment"
        android:label="@string/welcome_text"
        tools:layout="@layout/fragment_welcome">

        <action
            android:id="@+id/action_to_instruction"
            app:destination="@id/instructionsFragmentNav"
            app:popUpTo="@id/welcomeFragmentNav"
            app:popUpToInclusive="true" />

    </fragment>
    <fragment
        android:id="@+id/instructionsFragmentNav"
        android:name="com.example.android.shoe_store.screens.instructions.InstructionsFragment"
        android:label="@string/instructions_word"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instruction_nav_fragment_to_shoe_list_nav_fragment"
            app:destination="@id/shoeListFragmentNav" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragmentNav"
        android:name="com.example.android.shoe_store.screens.shoelist.ShoeListFragment"
        android:label="@string/shoe_list_word"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoe_list_nav_fragment_to_shoe_details_nav_fragment"
            app:destination="@id/shoeDetailsFragmentNav" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsFragmentNav"
        android:name="com.example.android.shoe_store.screens.shoedetails.ShoeDetailsFragment"
        android:label="@string/shoe_details"
        tools:layout="@layout/fragment_shoe_details" >
        <action
            android:id="@+id/action_shoeDetailsFragmentNav_to_shoeListFragmentNav"
            app:destination="@id/shoeListFragmentNav" />
    </fragment>
</navigation>